[package]
name = "ternoa-cli"
authors = [ "Ternoa" ]
edition = "2021"
version = "1.1.1"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Substrate Frame
node-inspect = { workspace = true, optional = true }

# Substrate Client
sc-cli = { workspace = true, optional = true }
sc-service = { workspace = true, optional = true }
sc-finality-grandpa = { workspace = true, optional = true }

# Rest
clap = { workspace = true, features = ["derive"], optional = true }

# Benchmark
frame-benchmarking-cli = { workspace = true, optional = true }

# Try Runtime
try-runtime-cli = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

# Ternoa
ternoa-service = { path = "../service", default-features = false, optional = true }
ternoa-client = { path = "../client", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = [ "wasmtime", "cli", "full-node", "mainnet-native" ]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
    "clap",
    "sc-cli",
    "sc-service",
    "frame-benchmarking-cli",
    "node-inspect",
    "try-runtime-cli",
    "sc-finality-grandpa",
    "ternoa-client",
]
runtime-benchmarks = ["ternoa-service/runtime-benchmarks"]
full-node = ["ternoa-service/full-node"]
try-runtime = ["ternoa-service/try-runtime", "try-runtime-cli"]

# Configure the native runtimes to use. Mainnet is enabled by default.
#
# Validators require the native runtime currently
alphanet-native = [ "ternoa-service/alphanet-native" ]
mainnet-native = [ "ternoa-service/mainnet-native" ]
