[package]
name = "ternoa-client"
authors = [ "Ternoa" ]
edition = "2021"
version = "1.1.1"

[dependencies]
# Frame
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Substrate
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Substrate Primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Substrate Client
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Ternoa
ternoa-core-primitives = { path = "../../core-primitives" }
ternoa-runtime-common = { path = "../../runtime/common" }

# Ternoa runtimes
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
mainnet-runtime = { path = "../../runtime/mainnet", optional = true }

# Frontier
fc-cli = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fc-consensus = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fc-db = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fc-mapping-sync= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fc-rpc-core = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fp-consensus = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fp-dynamic-core = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30", default-features = false }


[features]
default = ["mainnet"]
alphanet = ["alphanet-runtime"]
mainnet = ["mainnet-runtime"]