[package]
name = "ternoa-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Frame
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Substrate
substrate-frame-rpc-system = { workspace = true }

# Substrate Primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-finality-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-inherents = { workspace = true }
sp-timestamp = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }

# Substrate Client
sc-client-api = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true, default-features = false }
sc-cli = { workspace = true, default-features = false }

futures = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Ternoa
ternoa-core-primitives = { path = "../../core-primitives" }
ternoa-runtime-common = { path = "../../runtime/common" }

# Ternoa runtimes
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
mainnet-runtime = { path = "../../runtime/mainnet", optional = true }

[features]
default = ["mainnet"]
alphanet = ["alphanet-runtime"]
mainnet = ["mainnet-runtime"]