[package]
edition = "2018"
license = "Apache 2.0"
name = "ternoa-marketplace"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, version = '2.0.0', optional = true }
frame-support = { default-features = false, version = "2.0.0" }
frame-system = { default-features = false, version = "2.0.0" }
serde = { version = "1.0.102", optional = true }
sp-runtime = { default-features = false, version = "2.0.0" }
sp-std = { default-features = false, version = "2.0.0" }
ternoa-common = { default-features = false, path = "../../common" }

[dev-dependencies]
pallet-scheduler = "2.0.0"
sp-core = "2.0.0"
sp-io = "2.0.0"
ternoa-capsules = { path = "../capsules" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]