[package]
edition = "2018"
license = "Apache 2.0"
name = "ternoa-marketplace"
version = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate/", optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate/" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate/" }
serde = { version = "1.0.125", optional = true }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate/" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate/" }
ternoa-common = { default-features = false, path = "../../common" }
ternoa-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate/" }
sp-core = { git = "https://github.com/paritytech/substrate/" }
sp-io = { git = "https://github.com/paritytech/substrate/" }
ternoa-nfts = { path = "../nfts" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]
