[package]
edition = "2018"
license = "Apache 2.0"
name = "ternoa-nfts"
version = "0.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, version = "3.1.0", optional = true }
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
serde = { version = "1.0.125", optional = true }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }
ternoa-common = { default-features = false, path = "../../common" }

[dev-dependencies]
pallet-balances = "3.0.0"
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-common/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]